ocaml/testsuite/tests/typing-layouts-gadt-sort-var/test_extensible.compilers.reference
File "insert_extensible.ml", line 5, characters 58-59:
5 | and packed = Gadt_extensible.Mk ((fun _ -> assert false), g)
                                                              ^
Error: This expression has type t_void -> unit
       but an expression was expected of type 'a -> unit
       The layout of t_void is void, because
         of the annotation on the declaration of the type t_void.
       But the layout of t_void must be a sublayout of value, because
         of layout requirements from an imported definition.
